--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jwt-decode": "^3.1.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-emoji-textarea": "^2.0.1",
     "react-router-dom": "^5.2.0",
