--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rateyourstufffrontendapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://avartos.github.io/rateyourstufffrontendwebapp/",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -17,12 +18,15 @@
     "react-dom": "^17.0.2",
     "react-emoji-textarea": "^2.0.1",
     "react-router-dom": "^5.2.0",
+    "react-router-role-authorization": "^1.1.4",
     "react-scripts": "4.0.3",
     "sass": "^1.35.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
